--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ const { title, description = "A digital garden exploring photography, writing, a
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <style is:global>
       /* CSS Variables */
       :root {
@@ -172,7 +173,7 @@ const { title, description = "A digital garden exploring photography, writing, a
         <nav class="main-nav">
           <ul>
             <li><a href="/" class="nav-link">home</a></li>
-            <li><a href="/photography" class="nav-link">photography</a></li>
+            <li><a href="/photography" class="nav-link">postcards</a></li>
             <li><a href="/writing" class="nav-link">writing</a></li>
             <li><a href="/music" class="nav-link">music</a></li>
             <li><a href="/about" class="nav-link">about</a></li>
