--- a/src/pages/photography/index.astro
+++ b/src/pages/photography/index.astro
@@ -68,7 +68,7 @@ const photosWithRenderedContent = await Promise.all(
         <div class="postcard" id="postcard">
           <div class="postcard-front">
             <img id="modal-image" src="" alt="" />
-            <img src="/src/content/clicktoflip.svg" alt="Click to flip" class="flip-indicator" />
+            <img src="/clicktoflip.svg" alt="Click to flip" class="flip-indicator" />
           </div>
           <div class="postcard-back">
             <div class="postcard-header">
@@ -487,14 +487,14 @@ const photosWithRenderedContent = await Promise.all(
 
     /* Increased caption text sizes for ~600 characters */
     .postcard-text {
-      font-size: 1.3rem;
+      font-size: 1.15rem;
       line-height: 1.8;
       margin-bottom: 1.5rem;
       font-family: 'Playpen Sans', cursive;
     }
 
     .postcard.portrait .postcard-text {
-      font-size: 2rem;
+      font-size: 1.1rem;
       line-height: 1.75;
     }
 
