Update postcards URL

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -173,11 +173,10 @@ const { title, description = "A digital garden exploring photography, writing, a
         <nav class="main-nav">
           <ul>
             <li><a href="/" class="nav-link">home</a></li>
-            <li><a href="/photography" class="nav-link">postcards</a></li>
+            <li><a href="/postcards" class="nav-link">postcards</a></li>
             <li><a href="/writing" class="nav-link">writing</a></li>
             <li><a href="/music" class="nav-link">music</a></li>
             <li><a href="/about" class="nav-link">about</a></li>
-            <li><a href="/guestbook" class="nav-link">guestbook</a></li>
           </ul>
         </nav>
       </header>
